--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "social-icons": "^1.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
