--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@portabletext/react": "^3.0.0",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -18,6 +20,7 @@
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.12.12",
     "next": "13.4.3",
+    "next-sanity": "^4.3.2",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "react": "18.2.0",
