--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.12.12",
     "next": "13.4.3",
     "next-sanity": "^4.3.2",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "react": "18.2.0",
