--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/contact.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "email/contact.ts"],
   "exclude": ["node_modules"]
 }
